# my-ai-teacher-module

./: app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: style.css
src/: __init__.py  auth.py  chat_store.py  config.py  drive_log.py  google_oauth.py  prompts.py  rag_engine.py  routing.py  ui.py
src/compat/: __init__.py  config_bridge.py  llama.py
src/features/: admin_panels.py  build_flow.py  drive_card.py  quality_report.py  stepper_ui.py
src/patches/: overrides.py
src/rag/: __init__.py  checkpoint.py  drive.py  engine.py  index_build.py  llm.py  probe_drive.py  quality.py  storage.py
tests/: test_smoke.py
